fix SpotifyNotification on mobile

--- a/src/components/elements/SpotifyNotification/styles.module.scss
+++ b/src/components/elements/SpotifyNotification/styles.module.scss
@@ -1,6 +1,6 @@
 .toast {
   position: fixed;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
   max-width: 42.5rem;
